RESOLVED FIXED244944
Incorrect behavior of cursor over live-text quads with user-select: none
https://bugs.webkit.org/show_bug.cgi?id=244944
Summary Incorrect behavior of cursor over live-text quads with user-select: none
Vitor Roriz
Reported 2022-09-08 11:46:36 PDT
Summary: Hovering over an image with text, that has user-select: none still displays IBeam (text cursor). Steps To Reproduce: 1. Load a page with an image with text and with user-select: none (https://jsfiddle.net/vitorroriz/1c0kmqf4/5/show). 2. Wait for a second so the live-text overlay can be installed. 3. Hover the mouse over the text on the third image (that has user-select: none). 4. Note that the cursor is IBeam (text), despite the fact user-select: none is set.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-08 11:46:59 PDT
Alexsander Borges Damaceno
Comment 2 2024-12-18 22:38:08 PST
EWS
Comment 3 2025-02-04 09:57:51 PST
Committed 289793@main (4264524b4c60): <https://commits.webkit.org/289793@main> Reviewed commits have been landed. Closing PR #38192 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.