Avoid text cursor from being applied if `-webkit-user-select: none` is set https://bugs.webkit.org/show_bug.cgi?id=244944

Reviewed by Tim Nguyen.

The cursor was incorrectly changing to a text pointer even when `-webkit-user-select: none` was applied.
This is fixed by verifying the `-webkit-user-select` in the event handler and preventing the text pointer from being selected when `-webkit-user-select: none` is set.

* Source/WebCore/css/CSSProperties.json:
* LayoutTests/editing/selection/user-select-none-02-expected.txt: Added.
* LayoutTests/editing/selection/user-select-none-02.html: Added.
* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::selectCursor):

Canonical link: https://commits.webkit.org/289793@main